<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaiMai</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1381695872099156</string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New User Sign Up</string>
    <string name="bottom_text1">By signing up, you agree to our </string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="my_city">My City</string>
    <string name="signup">Signup</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="personal_info">Personal Information</string>
    <string name="username1">Username : </string>
    <string name="age">Age : </string>
    <string name="gender">Gender : </string>
    <string name="location">Location : </string>
    <string name="mobile">Mobile : </string>
    <string name="email1">Email : </string>
    <string name="male">Male </string>
    <string name="female">Female  </string>
    <string name="receive_notification">Receive Notification</string>
    <string name="my_postings">View My Postings</string>
    <string name="change_pwd">Change Password</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="empty_item">No items available in this category</string>
    <string name="share_this">Share this via</string>
    <string name="category">Category</string>
    <string name="item">Name your Item</string>
    <string name="description">A brief description of your Item</string>
    <string name="price">Price</string>
    <string name="city">Location</string>
    <string name="mai_mai_network">MAI MAI NETWORK</string>
    <string name="done">Done</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_video">Take Video</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="choose_video">Choose Video</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="item_sold">Item SOLD ? </string>
    <string name="remove_posting">Remove Posting </string>
    <string name="delete_item">Retract Item. Not Selling.</string>
    <string name="cancel">Cancel</string>
    <string name="reason">Reason</string>
    <string name="keep">Keeping It for Myself.</string>
    <string name="no_buyer_interest">No Buyer Interest.</string>
    <string name="gave">Gave It Away.</string>
    <string name="other">Other: </string>
    <string name="remove">Remove</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="empty_item_search">No items found</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="uploading">Uploading Your Post</string>
    <string name="send_current_loc">Send</string>
    <string name="tap_to_add_loc">Tap to add location</string>

</resources>