<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/addphoto"
            android:visibility="gone" />

        <Button
            android:id="@+id/fb_signup"
            android:layout_width="227dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:background="@drawable/signup_fb" />

        <Button
            android:id="@+id/google_signup"
            android:layout_width="227dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/signup_google" />

        <ImageView
            android:id="@+id/or_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/or"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/textfield"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:background="@drawable/textfield_b"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/forgot_pwd"
                android:textSize="13sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/login"
                android:text="@string/login"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/new_user_sign_up"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/signup_old"
            android:padding="10dp"
            android:text="@string/new_user_sign_up"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bottom_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_text1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_service"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>