<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/remove_posting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/navigation"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/remove_posting"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/navigation"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/delete_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="dismissListener"
            android:text="@string/delete_item"
            android:textColor="@color/dialog_name_text"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/navigation"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/item_sold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="dismissListener"
            android:text="@string/item_sold"
            android:textColor="@color/dialog_name_text"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/navigation"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="dismissListener"
            android:text="@string/cancel"
            android:textColor="@color/dialog_name_text"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>