<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sell_bg"
            android:padding="20dp" >

            <Button
                android:id="@+id/send_current_loc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/done_bg"
                android:text="@string/send_current_loc"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/send"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/remove_bg"
                android:text="Send"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/remove"
              android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/remove_bg"
                android:text="@string/remove"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tap_to_add_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/tap_to_add_loc"
                android:textColor="@color/orangish_brown"
                android:textSize="15sp" />

            <fragment
                android:id="@+id/map_all"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/send"
                android:layout_below="@id/tap_to_add_loc"
                android:layout_marginTop="5dp" />
        </RelativeLayout>
    </FrameLayout>

    <ListView
        android:id="@+id/drawer"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/sidemenubg"
        android:choiceMode="singleChoice" />

</android.support.v4.widget.DrawerLayout>